--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "prefix": "$",
   "server": "BoC; Development Server",
   "channel": ["bot-prompt"],
-  "initRole": ["440584224559333385", "Alpha Testers"]
+  "initRole": ["440584224559333385", "Alpha Testers"],
+  "adminRole": ["440583376655613952", "Developers"]
 }
