--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "client.js",
   "author": "PootDawg & Alattice",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "opusscript": "0.0.6",
+    "discord.js": "^11.4.2",
+    "opusscript": "0.0.6"
   }
 }
