--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "!",
+  "prefix": "$",
   "currency": " Doubloons",
   "server": "KryOS Wing",
   "channel": ["568935884838273067", "chatroom"],
