--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "IceCube Discord Bot",
   "main": "client.js",
-  "author": "PootDawg & Alattice",
+  "author": "vennyoot & Alattice",
   "dependencies": {
     "discord.js": "^11.3.2",
     "opusscript": "0.0.6",
